# notion-cli

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  release-please-config.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: Architecture.md  Commands.md  Configuration.md  Examples.md  Home.md  Installation.md
skills/notion/: LICENSE  SKILL.md
skills/notion/references/: block.md  comment.md  database.md  datasource.md  file-upload.md  formatting.md  page.md  search.md  user.md
src/: cli.rs  cli_tests.rs  client.rs  client_tests.rs  config.rs  config_tests.rs  main.rs  main_tests.rs  output.rs  output_tests.rs
src/commands/: block.rs  block_tests.rs  comment.rs  comment_tests.rs  database.rs  database_tests.rs  datasource.rs  datasource_tests.rs  file_upload.rs  file_upload_tests.rs  init.rs  init_tests.rs  mod.rs  page.rs  page_tests.rs  search.rs  search_tests.rs  user.rs  user_tests.rs
