[package]
name = "notion-cli"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for the Notion API"

[[bin]]
name = "notion"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
clap_mangen = "0.2"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
colored = "3"
dialoguer = "0.11"
anyhow = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
