[package]
name = "notion-cli"
version = "0.2.0"
edition = "2024"
description = "A fast, feature-rich CLI for the Notion API — manage pages, databases, blocks, users, comments and more from your terminal."
license = "MIT"
keywords = ["notion", "cli", "api", "productivity", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "notion"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
clap_mangen = "0.2"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
colored = "3"
dialoguer = "0.11"
anyhow = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
